fixes size of nav buttons on smaller screens

--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ a:focus {
 
 .logo{
     color: white;
-    font-size: 35px;
+    font-size: 33px;
     letter-spacing: 1px;
     cursor: pointer;
     margin-right: auto;
@@ -80,10 +80,10 @@ nav ul li a {
     text-decoration: none;
     font-weight: bold;
     text-transform: capitalize;
-    padding: 8px 7px;
-    font-size: 18px;
+    padding: 7px 6px;
+    font-size: 17px;
     background-color: rgba(0, 0, 0, 0.8); 
-    border-radius: 5px; 
+    border-radius: 8px; 
     transition: all 0.4s ease-in-out; 
     
 }
@@ -101,7 +101,7 @@ nav ul li a:hover {
 .btn-linkedin {
     background: #f9004d;
     border-radius: 0;
-    width: 90px;
+    width: 95px;
     height: 35px;
     color: #fff;
     border-width: 1px;
@@ -122,7 +122,7 @@ nav ul li a:hover {
 .btn-github {
     background: #f9004d;
     border-radius: 0;
-    width: 90px;
+    width: 95px;
     height: 35px;
     color: #fff;
     border-width: 1px;
